<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">网络应用实例</string>
    <string name="action_settings">Settings</string>
    <string name="button_image">网络图片查看器</string>
    <string name="button_html">网页源码查看器</string>
    <string name="button_xml">资讯客户端(XML)</string>
    <string name="button_json">资讯客户端(JSON)</string>
    <string name="title_activity_image">网络图片查看器</string>
    <string name="image_textview">请输入网络图片地址</string>
    <string name="imageView">网络图片</string>
    <string name="button">查看</string>
    <string name="title_activity_getand_post">GET 与 POST</string>
    <string name="button_GET">GET 与  POST</string>
    <string name="button_open">打开其他应用</string>
    <string name="title_activity_html">HtmlActivity</string>
    <string name="html_textview">显示网页源代码</string>
    <string name="imageURL">http://www.baidu.com/img/bdlogo.gif</string>
    <string name="htmlURL">http://commons.apache.org/proper/commons-compress/examples.html</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
