<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImageActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_textview" />

    <EditText
        android:id="@+id/image_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:text="http://www.baidu.com/img/bdlogo.gif"/>

    <Button
        android:id="@+id/showImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showImage"
        android:text="@string/button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageView" />

</LinearLayout>